Border fix, Button alignment, web description

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,6 +25,7 @@
   justify-content: space-between;
   min-width: 100%;
   margin-bottom: 24px;
+  align-items: top;
 }
 
 .navRight {
@@ -56,8 +57,8 @@
 
 .navLeftWork {
   display: flex;
-  align-items: center;
   opacity: 0.3;
+  align-items: top;
 }
 
 .navRightWork {
@@ -71,10 +72,9 @@
 }
 
 .navLeftWork button {
-  border: none;
   background: none;
   cursor: pointer;
-  
+  height: 50%;
 }
 
 .intro p {
